# K-Means-Comparisons

./: CMakeLists.txt  high_dimensional_speedup.csv  main.cpp  plot.py  speedup_plot_1.py  speedups.csv  speedups_results.csv  time.csv
include/: kmeans_par.h  kmeans_pars.h  kmeans_seq.h  kmeans_seqs.h
plots/: speedup_plot_1.py  speedup_plot_2.py
src/: kmeans_par.cpp  kmeans_par_simd.cpp  kmeans_par_single.cpp  kmeans_par_single_soa.cpp  kmeans_par_soa.cpp  kmeans_pars.cpp  kmeans_seq.cpp  kmeans_seq_single.cpp  kmeans_seqs.cpp
